@@ -32,6 +32,8 @@ def func_implicit_return_none():
 
 A = func_implicit_return_none()  # [assignment-from-none]
 
+lst = [3, 2]
+A = lst.sort()  # [assignment-from-none]
 
 def func_return_none_and_smth():
     """function returning none and something else"""
