@@ -1,3 +1,4 @@
 assignment-from-no-return:18:0:18:20::Assigning result of a function call, where the function has no return:UNDEFINED
 assignment-from-none:26:0:26:22::Assigning result of a function call, where the function returns None:UNDEFINED
 assignment-from-none:33:0:33:31::Assigning result of a function call, where the function returns None:UNDEFINED
+assignment-from-none:36:0:36:14::Assigning result of a function call, where the function returns None:UNDEFINED
